--- a/index.html
+++ b/index.html
@@ -78,14 +78,25 @@
                     </div>
 
                     <div class="images">
-                        <img src="./assets/img/logo (1).svg" alt="MeUndies" />
-                        <img src="./assets/img/logo (2).svg" alt="Slack" />
-                        <img src="./assets/img/logo (3).svg" alt="Amazon" />
-                        <img
-                            src="./assets/img/logo (4).svg"
-                            alt="WooCommerce"
-                        />
-                        <img src="./assets/img/logo (5).svg" alt="SitePoint" />
+                        <a href="#!">
+                            <img src="./assets/img/logo (1).svg" alt="MeUndies"
+                        /></a>
+                        <a href="#!">
+                            <img src="./assets/img/logo (2).svg" alt="Slack"
+                        /></a>
+                        <a href="#!">
+                            <img src="./assets/img/logo (3).svg" alt="Amazon"
+                        /></a>
+                        <a href="#!">
+                            <img
+                                src="./assets/img/logo (4).svg"
+                                alt="WooCommerce"
+                        /></a>
+                        <a href="#!">
+                            <img
+                                src="./assets/img/logo (5).svg"
+                                alt="SitePoint"
+                        /></a>
                     </div>
                 </div>
             </div>
