--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <body>
         <main>
             <!-- Header -->
-            <header class="header">
+            <header class="fixed-header">
                 <div class="content">
                     <nav class="navbar">
                         <!-- Logo  -->
@@ -36,6 +36,11 @@
                             <a href="#!" class="btn action-btn">Sign up</a>
                         </div>
                     </nav>
+                </div>
+            </header>
+            <!-- Hero -->
+            <div class="hero-wrap">
+                <div class="content">
                     <div class="hero">
                         <div class="info">
                             <p class="sub-title">Welcome to Besnik Agency</p>
@@ -57,7 +62,7 @@
                         />
                     </div>
                 </div>
-            </header>
+            </div>
             <!-- Clients -->
             <div class="clients">
                 <div class="content">
