--- a/index.html
+++ b/index.html
@@ -21,7 +21,12 @@
                 <div class="content">
                     <nav class="navbar">
                         <!-- Logo  -->
-                        <img src="./assets/img/Logo.svg" alt="Logo Besnik." />
+                        <a href="#!">
+                            <img
+                                src="./assets/img/Logo.svg"
+                                alt="Logo Besnik."
+                            />
+                        </a>
                         <!-- Navigation -->
                         <ul>
                             <li><a href="#!">Home</a></li>
