--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
         <link rel="stylesheet" href="./assets/css/styles.css" />
     </head>
     <body>
-        <main id="home">
+        <main>
             <!-- Header -->
             <header class="fixed-header">
                 <div class="content">
                     <nav class="navbar">
                         <!-- Logo  -->
-                        <a href="#home">
+                        <a href="#">
                             <img
                                 src="./assets/img/Logo.svg"
                                 alt="Logo Besnik."
@@ -29,7 +29,7 @@
                         </a>
                         <!-- Navigation -->
                         <ul>
-                            <li><a href="#home">Home</a></li>
+                            <li><a href="#">Home</a></li>
                             <li><a href="#services">Services</a></li>
                             <li><a href="#features">Features</a></li>
                             <li><a href="#resources">Resources</a></li>
@@ -46,26 +46,24 @@
             <!-- Hero -->
             <div class="hero-wrap">
                 <div class="content">
-                    <div class="hero">
-                        <div class="info">
-                            <p class="sub-title">Welcome to Besnik Agency</p>
-                            <h1 class="title">
-                                Discover a place you'll love to live.
-                            </h1>
-                            <p class="desc">
-                                Get the best real estate deals first, before
-                                they hit the mass market! hot foreclosure deals
-                                with one simple search.
-                            </p>
-                            <a href="#!" class="btn hero-cta">More About Us</a>
-                        </div>
-
-                        <img
-                            src="./assets/img/house illustration.svg"
-                            alt="Discover a place you'll love to live."
-                            class="hero-img"
-                        />
+                    <div class="info">
+                        <p class="sub-title">Welcome to Besnik Agency</p>
+                        <h1 class="title">
+                            Discover a place you'll love to live.
+                        </h1>
+                        <p class="desc">
+                            Get the best real estate deals first, before they
+                            hit the mass market! hot foreclosure deals with one
+                            simple search.
+                        </p>
+                        <a href="#!" class="btn hero-cta">More About Us</a>
                     </div>
+
+                    <img
+                        src="./assets/img/house illustration.svg"
+                        alt="Discover a place you'll love to live."
+                        class="hero-img"
+                    />
                 </div>
             </div>
             <!-- Clients -->
